test/corpus/machines.txt
================================================================================
machine: empty
================================================================================

machine M0
end

--------------------------------------------------------------------------------

(source_file
  (machine
    name: (identifier)))

================================================================================
machine: refines, sees, variables
================================================================================

machine M1
  refines M0
  sees C0 C1
  variables x y z
end

--------------------------------------------------------------------------------

(source_file
  (machine
    name: (identifier)
    (refines_clause
      target: (identifier))
    (sees_clause
      (identifier)
      (identifier))
    (variables_clause
      (identifier)
      (identifier)
      (identifier))))

================================================================================
multiple components in one file
================================================================================

context C0
end

machine M0
  sees C0
end

machine M1
  refines M0
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier))
  (machine
    name: (identifier)
    (sees_clause
      (identifier)))
  (machine
    name: (identifier)
    (refines_clause
      target: (identifier))))
